--- a/package.json
+++ b/package.json
@@ -20,5 +20,14 @@
   "bugs": {
     "url": "https://github.com/PenneyGadget/pizza-express/issues"
   },
-  "homepage": "https://github.com/PenneyGadget/pizza-express#readme"
+  "homepage": "https://github.com/PenneyGadget/pizza-express#readme",
+  "dependencies": {
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "jade": "^1.11.0"
+  },
+  "devDependencies": {
+    "mocha": "^2.4.5",
+    "request": "^2.71.0"
+  }
 }
